# qmd-rs

./: Cargo.toml  README.md  README.md2
.github/workflows/: ci.yml
docs/: PLAN.md  PRD.md  index.html
docs/mcp/: build-mcp-client.md  build-mcp-server.md  mcp-elicitation.md  mcp-prompts.spec.md  mcp-resources-spec.md  mcp-roots-spec.md  mcp-schema.ts.md  mcp-spec.md  mcp-transports-spec.md
src/: api.rs  chunker.rs  cli.rs  config.rs  db.rs  ingest.rs  main.rs  mcp.rs  search.rs
