[package]
name = "qmd"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
clap = { version = "4.5.60", features = ["derive", "env"] }
dirs = "6.0.0"
glob = "0.3.3"
hex = "0.4.3"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlite-vec = "0.1.7-alpha.10"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
tokio-stream = "0.1.18"
toml = "1.0.6"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.26.0"
